# devlens

./: .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE.txt  ONBOARDING.md  README.md  pyproject.toml  test_scope.txt
.github/workflows/: ci.yml  devlens.yml  docs-check.yml  onboarding.yml  publish.yml
devlens/: __init__.py  __main__.py  ai_review.py  analyzer.py  cache.py  cli.py  commenter.py  complexity.py  config.py  dashboard.py  depaudit.py  docs_checker.py  fixer.py  github.py  hooks.py  ignore.py  language_server.py  languages.py  onboarder.py  plugins.py  reporter.py  rules.py  scoreboard.py  security.py  summarizer.py
devlens-vscode/: README.md  package.json
devlens-vscode/src/: extension.ts
tests/: conftest.py  test_ai_review.py  test_analyzer.py  test_cache.py  test_cli.py  test_commenter.py  test_complexity.py  test_config.py  test_dashboard.py  test_depaudit.py  test_docs_checker.py  test_fixer.py  test_github.py  test_hooks.py  test_ignore.py  test_language_server.py  test_languages.py  test_onboarder.py  test_plugins.py  test_reporter.py  test_rules.py  test_scoreboard.py  test_security.py  test_summarizer.py
