[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devlens"
version = "0.6.0"
description = "AI-powered PR review, security scanning, complexity analysis, dependency audit, auto-fix, multi-language support, caching, and custom rules"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
devlens = "devlens.cli:main"

[project.optional-dependencies]
openai     = ["openai>=1.0"]
anthropic  = ["anthropic>=0.25"]
gemini     = ["google-generativeai>=0.5"]
groq       = ["groq>=0.9"]
all-ai     = ["openai>=1.0", "anthropic>=0.25", "google-generativeai>=0.5", "groq>=0.9"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
